add pdfs and slides

--- a/my-site/papers/2016-06-15-imies.markdown
+++ b/my-site/papers/2016-06-15-imies.markdown
@@ -2,5 +2,7 @@
 title: Constructing Integer Matrices with Integer Eigenvalues
 authors: Christopher Towse and Eric Campbell
 venue: The Mathematical Scientist, UK
-month: June 2016 
+month: June 2016
+pdf: "/pdfs/imies.pdf"
+slides: "/pdfs/imies_prez.pdf"
 ---
