--- a/my-site/papers/2017-04-15-thesis.markdown
+++ b/my-site/papers/2017-04-15-thesis.markdown
@@ -4,4 +4,6 @@ authors: Eric Campbell
 venue: Pomona College
 month: May 2017
 note: Undergraduate Thesis
+pdf: "/pdfs/thesis.pdf"
+slides: "/pdfs/math_thesis_prez.pdf"
 ---
