fix small errors

--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -139,13 +139,22 @@ Number Theory \& Cryptography
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript \textbullet{}Bash  \\
+Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript \textbullet{} bash  \\
 Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX\ \\ 
 \location{Over 1000 lines:}
 OCaml \textbullet{} R \textbullet{} MySQL \textbullet{} C++ \textbullet{} Java \\
 \location{Familiar:}
 Elm \textbullet{} C  \textbullet{} HTML/CSS  \textbullet{} iOS
 \sectionsep
+
+\subsection{Foreign Language}
+Professional French \textbullet{} Survival Dutch
+\sectionsep
+
+\subsection{Other}
+Guitar \textbullet{} Voice \textbullet{} Espresso \\
+Ballroom Dance \textbullet{} Linguistics
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -228,7 +237,7 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor
   Spring 2017 & TA      & Database Systems & Pomona College \\
   Fall   2016 & TA      & Programming Languages & Pomona College \\
   Spring 2016 & Head TA & Intro to CS & Pomona College \\
-  Fall   2016 & Head TA & Intro to CS & Pomona College
+  Fall   2015 &  TA     & Intro to CS & Pomona College
 \end{tabular}
 \sectionsep
 
