add pdfs and modularize homepage

--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -139,8 +139,8 @@ Number Theory \& Cryptography
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript \textbullet{} bash  \\
-Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX\ \\ 
+Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript   \\
+Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
 \location{Over 1000 lines:}
 OCaml \textbullet{} R \textbullet{} MySQL \textbullet{} C++ \textbullet{} Java \\
 \location{Familiar:}
@@ -204,13 +204,14 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~michael/}{Professor Michael 
 
 \runsubsection{Databases @ Pomona College}
 \descript{| Research Assistant}
-\location{Jan 2016 – Aug 2016| Claremont,CA}
+\location{Jan 2016 – Aug 2016| Claremont, CA}
 Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, an fast algorithm for finding (partial) subgraph isomorphisms on temporal graphs (graphs with time-varying edges). Built an in-memory database prototype implementing this algorithm.
 \sectionsep
 
 \runsubsection{Number Theory @ Scripps College}
 \descript{| Research Assistant}
-\location{Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profile/christopher-towse}{Professor Christopher Towse}} to develop a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created \href{http://ericthewry.github.io/integer_matrices}{a web app} to create an IMIE from an arbitrary input matrix. Results published in The Mathematical Scientist.}
+\location{December 2015 - July 2017 | Claremont, CA}
+Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profile/christopher-towse}{Professor Christopher Towse}} to develop a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created \href{http://ericthewry.github.io/integer_matrices}{a web app} to create an IMIE from an arbitrary input matrix. Results published in The Mathematical Scientist.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
