--- a/my-site/papers/2018-01-08-kmt.markdown
+++ b/my-site/papers/2018-01-08-kmt.markdown
@@ -4,4 +4,5 @@ authors: Ryan Beckett, Eric Campbell, and Michael Greenberg
 venue: POPL
 month: January 2018
 note: IN SUBMISSION
+pdf: "/pdfs/thesis.pdf"
 ---
