--- a/my-site/papers/2018-01-08-kmt.markdown
+++ b/my-site/papers/2018-01-08-kmt.markdown
@@ -5,4 +5,5 @@ venue: POPL
 month: January 2018
 note: IN SUBMISSION
 pdf: "/pdfs/kmt.pdf"
+descr: Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 ---
