--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -186,41 +186,48 @@ Ballroom Dance \textbullet{} Linguistics
 \descript{| Software Engineering Intern }
 \location{May 2014 – Aug 2014 | Palo Alto, CA}
 \begin{tightemize}
-\item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website.
-\item Improved new-user downloads by 30\%.
+\item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
 \item Developed front-end widgets for the browser extension.\end{tightemize}
-\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
+%     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Research}
-\runsubsection{Programming Languages @ Pomona College}
-\descript{| Research Assistant}
-\location{August 2016 – Present | Claremont, CA}
-Worked with \textbf{\href{http://www.cs.pomona.edu/~michael/}{Professor Michael Greenberg}} to prove Soundness and Completeness for Finite-Trace Linear Temporal Logic (LTL$_f$). Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal Net\textsc{kat} (TNK), resulting in a completeness proof for TNK. Resulted in my \href{https://ericthewry.github.io/pdfs/thesis.pdf}{\custombold{thesis}}, a submission to POPL 2018, and a submission to FoSSaCS 2018.
-\sectionsep
+\section{Selected Publications}
+$partial("templates/paper-list.tex")$
+%% \runsubsection{Kleene Algebra Modulo Theories [IN SUBMISSION]}\\
+%% \descript{Ryan Beckett, Eric Campbell, Michael Greenberg}
+%% \location{POPL 2018 | Los Angeles, CA | January 2018 }
+%% Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 
-\runsubsection{Databases @ Pomona College}
-\descript{| Research Assistant}
-\location{Jan 2016 – Aug 2016| Claremont, CA}
-Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, an fast algorithm for finding (partial) subgraph isomorphisms on temporal graphs (graphs with time-varying edges). Built an in-memory database prototype implementing this algorithm.
-\sectionsep
+%% \sectionsep
 
-\runsubsection{Number Theory @ Scripps College}
-\descript{| Research Assistant}
-\location{December 2015 - July 2017 | Claremont, CA}
-Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profile/christopher-towse}{Professor Christopher Towse}} to develop a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created \href{http://ericthewry.github.io/integer_matrices}{a web app} to create an IMIE from an arbitrary input matrix. Results published in The Mathematical Scientist.
+%% \runsubsection{Infiniteness and Linear Temporal Logic }\\
+%% \descript{Eric Campbell, advised by Michael Greenberg}
+%% \location{Pomona College | Claremont, CA | May 2017 [Undergraduate Thesis]}
+%% Proved Soundness and Completeness and developed a decision procedure for Finite-Trace Linear Temporal Logic. Showed axiomatic equivalence to Temporal NetKat.
+%% \sectionsep
+
+%% \runsubsection{Constructing Integer Matrices with Integer Eigenvalues} \\
+%% \descript{Christopher Towse and Eric Campbell}
+%% \location{The Mathematical Scientist | UK | June 2016}
+%% Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profile/christopher-towse}{Professor Christopher Towse}} to develop a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created \href{http://ericthewry.github.io/integer_matrices}{a web app} to create an IMIE from an arbitrary input matrix. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Independent Projects}
+\section{Projects}
+
+\runsubsection{Databases @ Pomona College}
+\descript{| Research Assistant}
+\location{Jan 2016 – Aug 2016| Claremont, CA}
+Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
+\sectionsep
+
 \runsubsection{\href{http://mathswipe.com}{MathSwipe}}
 \descript{| Technical Lead}
-\location{Manage a distributed team to build CoffeeScript puzzle game. The game randomly generates boards with arithmetic problems to solve by swiping. Developed an algorithm to ensure that every random board has a solution.}
+\location{Led a distributed team to build CoffeeScript puzzle game. Chose technologies, delegated tasks, and contributed majority of code.}
 \sectionsep
 
 \runsubsection{RoomDraw}
@@ -234,12 +241,8 @@ Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profil
 
 \section{Teaching} 
 
-\begin{tabular}{llll}
-  Spring 2017 & TA      & Database Systems & Pomona College \\
-  Fall   2016 & TA      & Programming Languages & Pomona College \\
-  Spring 2016 & Head TA & Intro to CS & Pomona College \\
-  Fall   2015 &  TA     & Intro to CS & Pomona College
-\end{tabular}
+$partial("templates/teaching-list.tex")$
+
 \sectionsep
 
 \end{minipage} 
