--- a/resume.tex
+++ b/resume.tex
@@ -81,24 +81,64 @@
 
 \section{Education} 
 
+
 \subsection{Cornell University}
-\descript{PhD in Computer Science}
-\location{Expected May 2022 | Ithaca, NY}
-Conc. in Programming Languages \\
-Department of Computer Science
-\sectionsep
+
+\descript{Ph.D. in Computer Science}
+
+  
+    \location{Expected May 2022 | Ithaca, NY}
+    \descript{M.Sc. in Computer Science}
+    \location{Expected May 2019 | Ithaca, NY}
+  
+
+  Conc. in Programming Languages
+  \sectionsep
 
 \subsection{Pomona College}
-\descript{BS in Computer Science, BS in Mathematics}
-\location{Grad. May 2017 | Claremont, CA}
-Conc. in Programming Languages \\
-Department of Computer Science \\
-\sectionsep
+
+\descript{B.A. in Computer Science}
+
+  
+    \descript{B.A. in Mathematics}
+    \location{Graduated May 2017 | Claremont, CA}
+  
+
+  Conc. in Programming Languages
+  \sectionsep
 
 \subsection{International School}
+
 \subsection{of Amsterdam}
-\location{Grad. May 2013 | Amsterdam, The Netherlands}
-\sectionsep
+
+\descript{International Baccalaureate}
+
+  \location{Graduated May 2013 | Amsterdam, The Netherlands}
+
+  Conc. in Mathematics
+  \sectionsep
+
+
+
+%% \subsection{Cornell University}
+%% \descript{Ph.D. in Computer Science}
+%% \location{Expected May 2022 | Ithaca, NY}
+%% Conc. in Programming Languages
+%% \descript{M.Sc. in Computer Science}
+%% \location{Expected May 2019 | Ithaca, NY}
+%% \sectionsep
+
+%% \subsection{Pomona College}
+%% \descript{BS in Computer Science, BS in Mathematics}
+%% \location{May 2017 | Claremont, CA}
+%% Conc. in Programming Languages
+%% \sectionsep
+
+%% \subsection{International School}
+%% \subsection{of Amsterdam}
+%% \location{May 2013 | Amsterdam, The Netherlands}
+%% Conc. in Mathematics
+%% \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
@@ -214,23 +254,6 @@ Developed a construction algorithm for Integer Matrices with Integer Eigenvalues
 \sectionsep
 
 
-%% \runsubsection{Kleene Algebra Modulo Theories [IN SUBMISSION]}\\
-%% \descript{Ryan Beckett, Eric Campbell, Michael Greenberg}
-%% \location{POPL 2018 | Los Angeles, CA | January 2018 }
-%% Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
-
-%% \sectionsep
-
-%% \runsubsection{Infiniteness and Linear Temporal Logic }\\
-%% \descript{Eric Campbell, advised by Michael Greenberg}
-%% \location{Pomona College | Claremont, CA | May 2017 [Undergraduate Thesis]}
-%% Proved Soundness and Completeness and developed a decision procedure for Finite-Trace Linear Temporal Logic. Showed axiomatic equivalence to Temporal NetKat.
-%% \sectionsep
-
-%% \runsubsection{Constructing Integer Matrices with Integer Eigenvalues} \\
-%% \descript{Christopher Towse and Eric Campbell}
-%% \location{The Mathematical Scientist | UK | June 2016}
-%% Worked with \textbf{\href{http://www.scrippscollege.edu/academics/faculty/profile/christopher-towse}{Professor Christopher Towse}} to develop a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created \href{http://ericthewry.github.io/integer_matrices}{a web app} to create an IMIE from an arbitrary input matrix. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
