--- a/cv.tex
+++ b/cv.tex
@@ -23,7 +23,7 @@
 
 %%%%%%%%%%%%%%%%% NAME OF APPLICANT %%%%%%%%%%%%%%%%%%%
 
-\noindent  \LARGE{\textbf{Eric Campbell}}  \\
+\noindent  \LARGE{\textbf{Eric Hayden Campbell}}  \\
 \vspace{-2ex}
 \hrule
 \normalsize
