--- a/resume.tex
+++ b/resume.tex
@@ -235,6 +235,8 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor
 
 \begin{tabular}{llll}
   
+    Fall 2017 & TA & Object Oriented Programming and Data Structures & Cornell University \\
+  
     Spring 2017 & TA & Database Systems & Pomona College \\
   
     Fall 2016 & TA & Programming Languages & Pomona College \\
