--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -73,16 +73,18 @@ StackOverflow:// \href{https://stackoverflow.com/users/8202530/ericthewry}{\cust
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Coursework}
-%% \subsection{Graduate}
-%% \sectionsep
+\subsection{Graduate}
+Network Programming Languages \\
+Advanced Systems
+\sectionsep
 
 \subsection{Undergraduate}
 Software Foundations (Coq) \\
 Programming Languages \\
 Senior Seminar (Security, Programming Languages, \& Ethics) \\
-Computability \& Logic \\
-Computational Statistics \\
-Number Theory \& Cryptography
+Computability \& Logic %% \\
+%% Computational Statistics \\     
+%% Number Theory \& Cryptography
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -92,8 +94,7 @@ Number Theory \& Cryptography
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript   \\
-Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
+Haskell \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
 \location{Over 1000 lines:}
 OCaml \textbullet{} R \textbullet{} MySQL \textbullet{} C++ \textbullet{} Java \\
 \location{Familiar:}
@@ -104,9 +105,9 @@ Elm \textbullet{} C  \textbullet{} HTML/CSS  \textbullet{} iOS
 Professional French \textbullet{} Survival Dutch
 \sectionsep
 
-\subsection{Other}
-Guitar \textbullet{} Voice \textbullet{} Espresso \\
-Ballroom Dance \textbullet{} Linguistics
+%% \subsection{Other}
+%% Guitar \textbullet{} Voice \textbullet{} Espresso \\
+%% Ballroom Dance \textbullet{} Linguistics
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -161,14 +162,14 @@ $partial("templates/paper-list.tex")$
 Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
 \sectionsep
 
-\runsubsection{\href{http://mathswipe.com}{MathSwipe}}
-\descript{| Technical Lead}
-\location{Led a distributed team to build CoffeeScript puzzle game. Chose technologies, delegated tasks, and contributed majority of code.}
-\sectionsep
+%% \runsubsection{\href{http://mathswipe.com}{MathSwipe}}
+%% \descript{| Technical Lead}
+%% \location{Led a distributed team to build CoffeeScript puzzle game. Chose technologies, delegated tasks, and contributed majority of code.}
+%% \sectionsep
 
-\runsubsection{RoomDraw}
-\descript{| Technical Lead}
-\location{Ruby on Rails \& PostgreSQL application to automate the Pomona College room-draw process. Algorithmically assigns rooms based on preferences.}
+%% \runsubsection{RoomDraw}
+%% \descript{| Technical Lead}
+%% \location{Ruby on Rails \& PostgreSQL application to automate the Pomona College room-draw process. Algorithmically assigns rooms based on preferences.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
