--- a/resume.tex
+++ b/resume.tex
@@ -110,16 +110,18 @@ StackOverflow:// \href{https://stackoverflow.com/users/8202530/ericthewry}{\cust
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Coursework}
-%% \subsection{Graduate}
-%% \sectionsep
+\subsection{Graduate}
+Network Programming Languages \\
+Advanced Systems
+\sectionsep
 
 \subsection{Undergraduate}
 Software Foundations (Coq) \\
 Programming Languages \\
 Senior Seminar (Security, Programming Languages, \& Ethics) \\
-Computability \& Logic \\
-Computational Statistics \\
-Number Theory \& Cryptography
+Computability \& Logic %% \\
+%% Computational Statistics \\     
+%% Number Theory \& Cryptography
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,8 +131,7 @@ Number Theory \& Cryptography
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell \textbullet{} Coq \textbullet{} Java-/CoffeeScript   \\
-Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
+Haskell \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
 \location{Over 1000 lines:}
 OCaml \textbullet{} R \textbullet{} MySQL \textbullet{} C++ \textbullet{} Java \\
 \location{Familiar:}
@@ -141,9 +142,9 @@ Elm \textbullet{} C  \textbullet{} HTML/CSS  \textbullet{} iOS
 Professional French \textbullet{} Survival Dutch
 \sectionsep
 
-\subsection{Other}
-Guitar \textbullet{} Voice \textbullet{} Espresso \\
-Ballroom Dance \textbullet{} Linguistics
+%% \subsection{Other}
+%% Guitar \textbullet{} Voice \textbullet{} Espresso \\
+%% Ballroom Dance \textbullet{} Linguistics
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -185,9 +186,15 @@ Ballroom Dance \textbullet{} Linguistics
 
 \section{Selected Publications}
 
+\runsubsection{Completeness for Logics on Finite Traces}
+\descript{Eric Campbell, Michael Greenberg}
+\location{FoSSaCS | October 2017}
+Present Sound and Complete axioms for Finite-Trace Linear Temporal Logic (LTLf) and Linear Dynamic Logic (LDLf)
+\sectionsep
+
 \runsubsection{Kleene Algebra Modulo Theories}
 \descript{Ryan Beckett, Eric Campbell, and Michael Greenberg}
-\location{POPL | July 2017}
+\location{PLDI | November 2017}
 Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 \sectionsep
 
@@ -217,14 +224,14 @@ Developed a construction algorithm for Integer Matrices with Integer Eigenvalues
 Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
 \sectionsep
 
-\runsubsection{\href{http://mathswipe.com}{MathSwipe}}
-\descript{| Technical Lead}
-\location{Led a distributed team to build CoffeeScript puzzle game. Chose technologies, delegated tasks, and contributed majority of code.}
-\sectionsep
+%% \runsubsection{\href{http://mathswipe.com}{MathSwipe}}
+%% \descript{| Technical Lead}
+%% \location{Led a distributed team to build CoffeeScript puzzle game. Chose technologies, delegated tasks, and contributed majority of code.}
+%% \sectionsep
 
-\runsubsection{RoomDraw}
-\descript{| Technical Lead}
-\location{Ruby on Rails \& PostgreSQL application to automate the Pomona College room-draw process. Algorithmically assigns rooms based on preferences.}
+%% \runsubsection{RoomDraw}
+%% \descript{| Technical Lead}
+%% \location{Ruby on Rails \& PostgreSQL application to automate the Pomona College room-draw process. Algorithmically assigns rooms based on preferences.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -235,7 +242,7 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor
 
 \begin{tabular}{llll}
   
-    Fall 2017 & TA & Object Oriented Programming and Data Structures & Cornell University \\
+    Fall 2017 & TA & OOP and Data Structures & Cornell University \\
   
     Spring 2017 & TA & Database Systems & Pomona College \\
   
