--- a/cv.tex
+++ b/cv.tex
@@ -119,11 +119,8 @@
      & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\
 \end{tabular}
 
-\begin{tabular}{@{} l l}  
-  \Large{Teaching}     & \textbf{Computer Science Department, Cornell University}\\
-  & TA, Object Oriented Programming and Data Structures, Spring 2018 \\
-  & TA, Object Oriented Programming and Data Structures, Fall 2017 \\
-  & \textbf{Computer Science Department, Pomona College} \\
+\begin{tabular}{@{} l l}
+  \Large{Teaching}      & \textbf{Computer Science Department, Pomona College} \\
 
      & TA, Database Systems, Spring 2017 \\
 
