--- a/resume.tex
+++ b/resume.tex
@@ -186,27 +186,47 @@ Professional French \textbullet{} Survival Dutch
 
 \section{Selected Publications}
 
-\runsubsection{Completeness for Logics on Finite Traces}
+\runsubsection{Injecting Finiteness to Prove Finite Linear Temporal Logic Complete}
 \descript{Eric Campbell, Michael Greenberg}
-\location{FoSSaCS | October 2017}
-Present Sound and Complete axioms for Finite-Trace Linear Temporal Logic (LTLf) and Linear Dynamic Logic (LDLf)
+\location{
+|
+
+In Progress
+}
+Present Sound and Complete axioms for Finite-Trace Linear Temporal Logic (LTLf)
 \sectionsep
 
 \runsubsection{Kleene Algebra Modulo Theories}
 \descript{Ryan Beckett, Eric Campbell, and Michael Greenberg}
-\location{PLDI | November 2017}
+\location{
+|
+
+In Progress
+}
 Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 \sectionsep
 
 \runsubsection{Infiniteness and Linear Temporal Logic}
 \descript{Eric Campbell, advised by Michael Greenberg}
-\location{Pomona College | May 2017}
+\location{
+
+Pomona College
+|
+
+May 2017
+}
 Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.
 \sectionsep
 
 \runsubsection{Constructing Integer Matrices with Integer Eigenvalues}
 \descript{Christopher Towse and Eric Campbell}
-\location{The Mathematical Scientist, UK | June 2016}
+\location{
+
+The Mathematical Scientist, UK
+|
+
+June 2016
+}
 Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.
 \sectionsep
 
@@ -241,6 +261,8 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor
 \section{Teaching} 
 
 \begin{tabular}{llll}
+  
+    Spring 2017 & TA & OOP and Data Structures & Cornell University \\
   
     Fall 2017 & TA & OOP and Data Structures & Cornell University \\
   
