--- a/cv.tex
+++ b/cv.tex
@@ -47,9 +47,8 @@
 
 \noindent \begin{tabular}{@{} l l}
   \Large{Education} 
-
     & \textbf{Cornell University} \\
-
+  
     & Ph.D. in Computer Science, Expected May 2022 \\
 
   
@@ -78,13 +77,10 @@
 
     & Concentration in Mathematics \\
     & \\
-
-
-  
   \Large{Publications} 
     & \textit{Kleene Algebra Modulo Theories} \\
     & Ryan Beckett, Eric Campbell, and Michael Greenberg \\
-    & \textit{POPL}, January 2018
+    & \textit{POPL}, January 2019
 
     \hfill [IN SUBMISSION]
  \\
@@ -103,35 +99,53 @@
     & \textit{The Mathematical Scientist, UK}, June 2016
  \\
     & \\
+\end{tabular}
 
-
- 
-  \Large{Research}    & \textbf{Databases Group, Pomona College} \\ 
+\begin{tabular}{@{} l l }
+ \Large{Research}
+     & \textbf{Cornell-Princeton Network Programming Initiative}\\
+     & PhD Student Researcher\\
+     & Project: Flexible Data Models for Net\textsc{KAT}\\ \\
+     & \textbf{Databases Group, Pomona College} \\ 
      & Research Assistant \\
      & Project: Fast Subgraph Isomorphism in Temporal Networks  \\
+     & \\ \\
+ \Large{Industry}
+     & \textbf{Fujitsu Laboratories of America} \\
+     & Research Intern \\
+     & \textit{Sunnyvale, CA}. May 2018 - Aug 2018 \\
      & \\
-  \Large{Industry} & \textbf{Originate, Inc} \\
+     & \textbf{Originate, Inc} \\
      & Software Engineering Intern \\
      & \textit{San Francisco, CA}. May 2015 - Aug 2015 \\
      & \\
      & \textbf{Gladly, Inc} \\
      & Software Engineering Intern \\
-     & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\
+     & \textit{Palo Alto, CA}. May 2014 - Aug 2014 \\ \\
 \end{tabular}
 
 \begin{tabular}{@{} l l}
-  \Large{Teaching}      & \textbf{Computer Science Department, Pomona College} \\
+  \Large{Teaching}
+  & \textbf{Computer Science Department, Cornell University} \\
 
-     & TA, Database Systems, Spring 2017 \\
+  & TA, Object Oriented Programming and Data Structures, Spring 2018 \\
+  
+  & TA, Object Oriented Programming and Data Structures, Fall 2017 \\
+  &\\
+  
+  & \textbf{Computer Science Department, Pomona College} \\ 
+  
+  & TA, Databases Systems, Spring 2017 \\
 
-     & TA, Programming Languages, Fall 2016 \\
-
-     & Head TA, Intro to CS, Spring 2016 \\
-
-     & TA, Intro to CS, Fall 2015 \\
+  & TA, Programming Languages, Fall 2016 \\
+  
+  & Head TA, Intro to CS, Spring 2016 \\
+  
+  & TA, Intro to CS, Fall 2015 \\
 
 
 \end{tabular}
 \end{document}
+
 
 
