--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\namesection{EricHayden}{Campbell}{ \urlstyle{same}\url{https://ericthewry.github.io} \\
+\namesection{Eric}{Hayden Campbell}{ \urlstyle{same}\url{https://ericthewry.github.io} \\
 \href{mailto:ehc86@cornell.edu}{ehc86@cornell.edu} | 909.343.9392
 }
 
@@ -111,14 +111,17 @@ StackOverflow:// \href{https://stackoverflow.com/users/8202530/ericthewry}{\cust
 
 \section{Coursework}
 \subsection{Graduate}
-Network Programming Languages \\
+Kleene Algebra \textbullet{}
+Category Theory \textbullet{}
+Advanced Programming Languages \textbullet{}
+Network Programming Languages \textbullet{}
 Advanced Systems
 \sectionsep
 
 \subsection{Undergraduate}
-Software Foundations (Coq) \\
-Programming Languages \\
-Senior Seminar (Security, Programming Languages, \& Ethics) \\
+Software Foundations (Coq) \textbullet{}
+Programming Languages \textbullet{}
+Senior Seminar (Security, Programmig Languages, \& Ethics) \textbullet{}
 Computability \& Logic %% \\
 %% Computational Statistics \\     
 %% Number Theory \& Cryptography
@@ -131,11 +134,11 @@ Computability \& Logic %% \\
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \textbullet{} bash \\ 
+Haskell  \textbullet{} C++ \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \\ 
 \location{Over 1000 lines:}
-OCaml \textbullet{} R \textbullet{} MySQL \textbullet{} C++ \textbullet{} Java \\
+OCaml \textbullet{} R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \location{Familiar:}
-Elm \textbullet{} C  \textbullet{} HTML/CSS  \textbullet{} iOS
+Elm \textbullet{} C  \textbullet{} HTML/CSS \textbullet{} OCaml
 \sectionsep
 
 \subsection{Foreign Language}
@@ -163,10 +166,20 @@ Professional French \textbullet{} Survival Dutch
 
 \section{Industry Experience}
 
+\runsubsection{Fujitsu Laboratories of America}
+\descript{| Research Intern}
+\location{May 2018 - Aug 2018 | Sunnyvale, CA}
+\vspace{\topsep}
+\begin{tightemize}
+\item Developed time-based procedure for detecting anomalies in networks.
+\item Analyzed synthetic topologies running GoBGP configurations.
+\item Detected a bug in GoBGP
+\end{tightemize}
+ \sectionsep
 \runsubsection{Originate}
 \descript{| Software Engineering Intern }
 \location{May 2015 – Aug 2015 | San Francisco, CA}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
   \item Developed Massive multi-user Ruby on Rails \& Coffeescript applications.
   \item Won Nation-wide intern hackathon.
@@ -186,49 +199,44 @@ Professional French \textbullet{} Survival Dutch
 
 \section{Selected Publications}
 
+
 \runsubsection{Injecting Finiteness to Prove Finite Linear Temporal Logic Complete}
 \descript{Eric Campbell, Michael Greenberg}
-\location{
-|
 
-In Progress
-}
+
+\location{In Progress}
+
+
 Present Sound and Complete axioms for Finite-Trace Linear Temporal Logic (LTLf)
 \sectionsep
 
+
+
 \runsubsection{Kleene Algebra Modulo Theories}
 \descript{Ryan Beckett, Eric Campbell, and Michael Greenberg}
-\location{
-|
 
-In Progress
-}
+
+\location{In Progress}
+
+
 Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.
 \sectionsep
 
-\runsubsection{Infiniteness and Linear Temporal Logic}
-\descript{Eric Campbell, advised by Michael Greenberg}
-\location{
 
-Pomona College
-|
 
-May 2017
-}
-Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.
-\sectionsep
+
+
 
 \runsubsection{Constructing Integer Matrices with Integer Eigenvalues}
 \descript{Christopher Towse and Eric Campbell}
-\location{
 
-The Mathematical Scientist, UK
-|
 
-June 2016
-}
+\location{The Mathematical Scientist, UK|June 2016}
+
+
 Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.
 \sectionsep
+
 
 
 
@@ -262,7 +270,7 @@ Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor
 
 \begin{tabular}{llll}
   
-    Spring 2017 & TA & OOP and Data Structures & Cornell University \\
+    Spring 2018 & TA & OOP and Data Structures & Cornell University \\
   
     Fall 2017 & TA & OOP and Data Structures & Cornell University \\
   
