update resume and cv

--- a/my-site/cv.tex
+++ b/my-site/cv.tex
@@ -77,13 +77,17 @@
 
     & Concentration in Mathematics \\
     & \\
-  \Large{Publications} 
-    & \textit{Kleene Algebra Modulo Theories} \\
-    & Ryan Beckett, Eric Campbell, and Michael Greenberg \\
-    & \textit{POPL}, January 2019
+  \Large{Publications}
+    & \textit{How to Avoid Making a Billion-Dollar Mistake:}\\
+     & \textit{Type-Safe Data Plane Programming with SafeP4} \\
+    & Matthias Eicholtz, Eric Campbell, Nate Foster, \\ &Guido Salvaneschi, Mira Mezini \\
+    & \textit{ECOOP}, July 2019 \\
+    % & \textit{Kleene Algebra Modulo Theories} \\
+    % & Ryan Beckett, Eric Campbell, and Michael Greenberg \\
+    % & \textit{POPL}, January 2019
 
-    \hfill [IN SUBMISSION]
- \\
+    % \hfill [IN SUBMISSION] \\
+ 
     & \\
 
     & \textit{Infiniteness and Linear Temporal Logic} \\
