--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -149,12 +149,12 @@ Professional French \textbullet{} Survival Dutch
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Gladly,Inc}
-\descript{| Software Engineering Intern }
-\location{May 2014 – Aug 2014 | Palo Alto, CA}
-\begin{tightemize}
-\item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
-\item Developed front-end widgets for the browser extension.\end{tightemize}
+% \runsubsection{Gladly,Inc}
+% \descript{| Software Engineering Intern }
+% \location{May 2014 – Aug 2014 | Palo Alto, CA}
+% \begin{tightemize}
+% \item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
+% \item Developed front-end widgets for the browser extension.\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
