--- a/resume.tex
+++ b/resume.tex
@@ -186,18 +186,30 @@ Professional French \textbullet{} Survival Dutch
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Gladly,Inc}
-\descript{| Software Engineering Intern }
-\location{May 2014 – Aug 2014 | Palo Alto, CA}
-\begin{tightemize}
-\item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
-\item Developed front-end widgets for the browser extension.\end{tightemize}
+% \runsubsection{Gladly,Inc}
+% \descript{| Software Engineering Intern }
+% \location{May 2014 – Aug 2014 | Palo Alto, CA}
+% \begin{tightemize}
+% \item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
+% \item Developed front-end widgets for the browser extension.\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Selected Publications}
+
+
+\runsubsection{How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4}
+\descript{Matthias Eicholtz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini}
+
+
+\location{ECOOP|July 2019}
+
+
+Develop a Type System for P4 that prohibits references to invalid headers. Surveys open source programs to identify real-world bugs that our type system prevents
+\sectionsep
+
 
 
 \runsubsection{Injecting Finiteness to Prove Finite Linear Temporal Logic Complete}
