--- a/my-site/resume.tex
+++ b/my-site/resume.tex
@@ -97,16 +97,14 @@ Computability \& Logic %% \\
 \section{Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Haskell  \textbullet{} C++ \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \\ 
+OCaml \textbullet SMTLIB \textbullet Haskell \textbullet{} Coq \textbullet{} Java \textbullet{} Python \textbullet{} Ruby on Rails \textbullet{} \LaTeX \\ 
 \location{Over 1000 lines:}
-OCaml \textbullet{} R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
-\location{Familiar:}
-Elm \textbullet{} C  \textbullet{} HTML/CSS \textbullet{} OCaml
+R \textbullet{} SQL \textbullet{} Java \textbullet{} bash \\
 \sectionsep
 
-\subsection{Foreign Language}
-Professional French \textbullet{} Survival Dutch
-\sectionsep
+% \subsection{Foreign Language}
+% Professional French \textbullet{} Survival Dutch
+% \sectionsep
 
 %% \subsection{Other}
 %% Guitar \textbullet{} Voice \textbullet{} Espresso \\
@@ -153,7 +151,8 @@ Professional French \textbullet{} Survival Dutch
 % \descript{| Software Engineering Intern }
 % \location{May 2014 – Aug 2014 | Palo Alto, CA}
 % \begin{tightemize}
-% \item Worked on the Tab for a Cause team in JQuery and Python to redesign the front-end implementation of the website. Improved user downloads by 40\%.
+% \item Improved user downloads by 40\% by redesinging the website
+%   front-end.
 % \item Developed front-end widgets for the browser extension.\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -167,13 +166,13 @@ $partial("templates/paper-list.tex")$
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Projects}
+% \section{Projects}
 
-\runsubsection{Databases @ Pomona College}
-\descript{| Research Assistant}
-\location{Jan 2016 – Aug 2016| Claremont, CA}
-Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
-\sectionsep
+% \runsubsection{Databases @ Pomona College}
+% \descript{| Research Assistant}
+% \location{Jan 2016 – Aug 2016| Claremont, CA}
+% Worked with \textbf{\href{http://www.cs.pomona.edu/~mwu/files/bio.htm}{Professor Melanie Wu}} on the development of \textbf{QuickTSI}, a fast query system for finding (partial) subgraph isomorphisms on temporal graphs.
+% \sectionsep
 
 %% \runsubsection{\href{http://mathswipe.com}{MathSwipe}}
 %% \descript{| Technical Lead}
