add epikat and avenir

--- a/my-site/papers/2020-12-11-avenir.markdown
+++ b/my-site/papers/2020-12-11-avenir.markdown
@@ -3,6 +3,7 @@ title: "Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis"
 authors: Eric Hayden Campbell, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster
 venue: NSDI
 month: April 2020 
+pdf: "pdfs/avenir.pdf"
 descr: "Employ program synthesis to translate abstract switch operations into target switch operations"
 --- 
 
