--- a/my-site/papers/2020-12-01-epik.markdown
+++ b/my-site/papers/2020-12-01-epik.markdown
@@ -3,6 +3,7 @@ title: "Epistemic Semantics in Guarded String Models"
 authors: Eric Hayden Campbell, Mats Rooth
 venue: SCiL
 month: February 2020 
+pdf: "/pdfs/epistemic_kat.pdf"
 descr: "Extend Kleene Algebra with Tests to model epistemic semantics of modal verbs in natural English"
 --- 
 
